Spring 2022 Ports of Gradle Projects to Maven

--- a/v2.6/spring-demo/Makefile
+++ b/v2.6/spring-demo/Makefile
@@ -1,10 +1,16 @@
 clean:
 	mvn clean
 
+compile:
+	mvn compile
+
+run:
+	mvn spring-boot:run
+
 build:
 	mvn package
 
-run:
+run-jar:
 	java -jar target/spring-demo-1.0.jar
 
 
