--- a/v2.6/spring-gumball/spring-gumball-v1.0/pom.xml
+++ b/v2.6/spring-gumball/spring-gumball-v1.0/pom.xml
@@ -77,6 +77,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.example.springgumball.SpringGumballApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
