--- a/v2.6/spring-payments/spring-payments-v1.1/pom.xml
+++ b/v2.6/spring-payments/spring-payments-v1.1/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>spring-payments</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.1</version>
     <name>spring-payments</name>
     <description>spring-payments</description>
     <properties>
