--- a/v2.6/spring-payments/spring-payments-v1.1/src/main/resources/application-sample.properties
+++ b/v2.6/spring-payments/spring-payments-v1.1/src/main/resources/application-sample.properties
@@ -7,3 +7,9 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+cybersource.merchantkeyid=<keyid>
+cybersource.merchantsecretkey=<shared-key>
+cybersource.merchantid=<merchant-id>
+cybersource.apihost=apitest.cybersource.com
+
