--- a/v2.6/spring-demo/Makefile
+++ b/v2.6/spring-demo/Makefile
@@ -23,11 +23,11 @@ run-jar-8082:
 # Docker
 
 docker-build: build
-	docker build -t spring-demo .
+	docker build --platform=linux/amd64 -t spring-demo .
 	docker images
 
 docker-run: docker-build
-	docker run --name spring-demo -td -p 80:8080 spring-demo
+	docker run --name spring-demo --platform=linux/amd64 -td -p 80:8080 spring-demo
 	docker ps
 
 docker-clean:
