--- a/v2.6/spring-gumball/spring-gumball/docker-compose.yaml
+++ b/v2.6/spring-gumball/spring-gumball/docker-compose.yaml
@@ -4,6 +4,7 @@ version: "3"
 services:
   mysql:
     image: mysql:8.0
+    platform: linux/amd64
     volumes:
       - /tmp:/tmp
     networks:
@@ -17,6 +18,7 @@ services:
     restart: always
   gumball:
     image: spring-gumball
+    platform: linux/amd64
     depends_on:
       - mysql
     volumes:
@@ -30,6 +32,7 @@ services:
     restart: always
   lb:
     image: eeacms/haproxy
+    platform: linux/amd64
     depends_on:
       - gumball
     ports:
