--- a/v2.7/spring-gumball/spring-gumball-v3.1/src/main/resources/application.properties
+++ b/v2.7/spring-gumball/spring-gumball-v3.1/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/cmpe172
 #spring.datasource.username=root
 #spring.datasource.password=cmpe172
+
+# HMAC KEY
+hmac.key=${HMAC_KEY:kwRg54x2Go9iEdl49jFENRM12Mp711QI}
+
