--- a/v2.7/spring-gumball/spring-gumball-v3.3/docker-compose.yaml
+++ b/v2.7/spring-gumball/spring-gumball-v3.3/docker-compose.yaml
@@ -2,6 +2,16 @@
 version: "3"
 
 services:
+  redis:
+    image: redis
+    platform: linux/amd64
+    networks:
+      - network
+    ports:
+      - 6379
+    networks:
+      - network
+    restart: always  
   mysql:
     image: mysql:8.0
     platform: linux/amd64
@@ -29,6 +39,7 @@ services:
       - 8080
     environment:
       MYSQL_HOST: "mysql"
+      REDIS_HOST: "redis"
     restart: always
   lb:
     image: eeacms/haproxy
@@ -42,7 +53,7 @@ services:
       BACKENDS: "gumball"
       BACKENDS_PORT: "8080"
       DNS_ENABLED: "true"
-      COOKIES_ENABLED: "true"
+      COOKIES_ENABLED: "false"
       LOG_LEVEL: "info"
     networks:
       - network
